# ChangeLog for dev-python/cherrypy
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cherrypy/ChangeLog,v 1.32 2009/02/28 19:01:51 patrick Exp $

*cherrypy-3.1.1 (28 Feb 2009)

  28 Feb 2009; Patrick Lauer <patrick@gentoo.org> +cherrypy-3.1.1.ebuild:
  Bump to 3.1.1, closes #260387

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> cherrypy-2.3.0.ebuild:
  Adding ~amd64 keyword to 2.3.0

*cherrypy-3.1.0 (06 Nov 2008)

  06 Nov 2008; Jesus Rivero <neurogeek@gentoo.org> +cherrypy-3.1.0.ebuild:
  Version bump. Bug #245656

*cherrypy-2.3.0 (02 Jul 2008)

  02 Jul 2008; Rob Cakebread <pythonhead@gentoo.org> +cherrypy-2.3.0.ebuild:
  Version bump. Dropped amd64, ia64 and ppc because of new dependency on
  webtest and its deps webob and wsgiref

*cherrypy-3.0.3 (29 Apr 2008)

  29 Apr 2008; Rob Cakebread <pythonhead@gentoo.org> +cherrypy-3.0.3.ebuild:
  Version bump. #Closes 219485

  09 Jan 2008; Raúl Porcel <armin76@gentoo.org> cherrypy-2.2.1-r2.ebuild:
  ia64/x86 stable wrt security #204829

*cherrypy-2.2.1-r2 (08 Jan 2008)

  08 Jan 2008; Ali Polatel <hawking@gentoo.org>
  -files/cherrypy-2.1.1-test-gentoo.patch,
  +files/cherrypy-2.2.1-invalidsession.patch,
  +files/cherrypy-2.2.1-py2.5.patch, -cherrypy-2.1.1.ebuild,
  -cherrypy-2.2.1-r1.ebuild, +cherrypy-2.2.1-r2.ebuild,
  -cherrypy-3.0.2.ebuild:
  Revision bump. Backported security patch for 2.2.1, bug 204829. Added patch
  to fix tests for python-2.5. Drop old.

  08 Jan 2008; Raúl Porcel <armin76@gentoo.org> cherrypy-3.0.2-r1.ebuild:
  ia64/x86 stable wrt security #204829

*cherrypy-3.0.2-r1 (08 Jan 2008)

  08 Jan 2008; Ali Polatel <hawking@gentoo.org>
  +files/cherrypy-3.0.2-invalidsession.patch, +cherrypy-3.0.2-r1.ebuild:
  Revision bump. Added patch from upstream for directory traversal via
  malicious cookie, bug 204829

  01 Nov 2007; Markus Ullmann <jokey@gentoo.org> cherrypy-3.0.2.ebuild:
  Stable on x86

*cherrypy-3.0.2 (04 Sep 2007)
