@@ -3,9 +3,11 @@ DIST CherryPy-3.0.2.tar.gz 262428 RMD160 0bd98ca014b6539cd03969b6b3d85308d296b88
 DIST CherryPy-3.0.3.tar.gz 265274 RMD160 86b023b5a3a957ca05d05aba3b95e0d6d2eb111a SHA1 dc5ab2ac2a1c0065f03e12374a782094f9e94ba9 SHA256 534fac59b1e09766ddd7a7c7b2b3102594e93a499ea37ac3ac1c7b1970400692
 DIST CherryPy-3.1.0.tar.gz 313836 RMD160 f7511e0c2b59b55dad7860129c973eb515f624a4 SHA1 8ec4f7aecce29ac2a71603d4948f42c948fc2908 SHA256 5d08a13e57aaa7788441fc295e9f7b8f88ff84043c9148fb1dda100e30d12ce8
 DIST CherryPy-3.1.1.tar.gz 320836 RMD160 1d5975ade0b511ad5f116c398938c87ce38d323f SHA1 0a8aace00ea28adc05edd41e20dd910042e6d265 SHA256 8215e97a2a7e4d73ca084e3cca0d39bcc3cf603633ff9bbce208a445348c2b00
+DIST CherryPy-3.1.2.tar.gz 319196 RMD160 43a34bc7454da21b597c60124ff0fc61b8dc3e31 SHA1 a94aedfd0e675858dbcc32dd250c23d285ee9b88 SHA256 0dfd65507b047d54c09849e7a4b8bdd3616fa8776a5dbff7697cbf6ea1559bf6
 EBUILD cherrypy-3.0.2-r1.ebuild 1012 RMD160 8409e70382b973401e03922bc2f10928c9118a70 SHA1 f045a011e2994bc4d08cdb55cd576b01f9ac7c50 SHA256 2f41b6bc0ab0dad3a8c1c8ee67125e339cdb1d18b3a98b7f647883cb37a9a746
 EBUILD cherrypy-3.0.3.ebuild 964 RMD160 ef99aee3c567fd214c8eb533ec8ea81d2f338f43 SHA1 cbdb6e5e32d3afaa06b40f3cdbd25c33ed92d942 SHA256 62d89eb75bcd4caf820c5c9f5ab96dcd273a636d621c56049f17a46993fd0f88
 EBUILD cherrypy-3.1.0.ebuild 955 RMD160 8f645cfd6f1e440ec7e24791e0df7edf90380fb9 SHA1 aaceae14034576c906e1ad52306eb8752102417d SHA256 58e37f31f9f07f3c7b0f80317f43062816b3debbcd4c22c985442ed5575f7ef1
 EBUILD cherrypy-3.1.1.ebuild 953 RMD160 78e0eea1f82b81a503c19fe9654e733b79c97976 SHA1 2083748fd710a4848cc808ac84946b2a18285ad6 SHA256 7064eb8f01222fec07d0d85705f132e14513e5700a6d3e59aef973509862f774
-MISC ChangeLog 5912 RMD160 b99d204402ef65b48e02adc6554e36375aca01f1 SHA1 2fa4eb388ab1d568a1b242336410e4b211c45a8c SHA256 05fde6edbf4e11ce7b2743b877792ebb4ed924911cc4fd953d4b9b13805fe3fa
+EBUILD cherrypy-3.1.2.ebuild 953 RMD160 cb64728bb66741847166ce765f659151bd0659e6 SHA1 5f30cc8c33bc33c08cd2010d22b081bb5211f00a SHA256 df8b8a3354d45099c77b81628fdb1c78ff3756a8a83da78e37bcf7ed6ad3621e
+MISC ChangeLog 6049 RMD160 0b9826b261224f207352f693cf0ff834bcf50914 SHA1 ad0fbe5d23018a78ddfc58d32ec801b99caeaa59 SHA256 6361da51ff08e0ab75ed1ceeacaea53d415d97ec5f9b6f348be53212a33c5a6a
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
